SERVER-46597 balancerCollectionStatus command fails with Unauthorized when using db.adminCommand